--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -15,6 +15,9 @@ body {
      border: 1px dotted gray;
      padding: 20px;
 }
+.jumbotron p.active{
+     color: #1f6ddd;
+}
 
 .jumbotron {
 	position: relative;
